# PrestaGest-with-Tauri

./: .gitignore  .taurignore  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json
src-tauri/: .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2025-01-01-000000_create_tables/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  window_commands.rs
src-tauri/src/config/: mod.rs
src-tauri/src/server/: mod.rs  routes.rs
src-tauri/src/server/application/: mod.rs
src-tauri/src/server/application/requests/: auth_model_requests.rs  borrower_model_requests.rs  mod.rs
src-tauri/src/server/application/services/: auth_service.rs  jwt_service.rs  mod.rs
src-tauri/src/server/application/use_cases/: borrower_use_cases.rs  mod.rs  user_use_cases.rs
src-tauri/src/server/domain/: mod.rs
src-tauri/src/server/domain/entities/: borrower.rs  user.rs
src-tauri/src/server/domain/repositories/: borrower_repository.rs  mod.rs  user_repository.rs
src-tauri/src/server/infrastructure/database/: connection.rs  mod.rs  schema.rs
src-tauri/src/server/presentation/: mod.rs
src-tauri/src/server/presentation/controllers/: auth_controller.rs  borrower_controller.rs  mod.rs  user_controller.rs
src-tauri/src/server/presentation/middleware/: jwt_middleware.rs  mod.rs  rate_limit.rs  timing.rs
src-tauri/src/server/presentation/routes/: api_routes.rs  auth_routes.rs  borrower_routes.rs  mod.rs  user_routes.rs
src-tauri/src/utils/: error.rs  mod.rs  service_factory.rs
(+67 files in other folders)
