[package]
name = "prestagest"
version = "1.0.0"
description = "Una aplicación para gestionar los prestamos y llevar registros detallados de las finanzas"
authors = ["Victor Hernandez Salcedo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "prestagest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
# Dependencias para el servidor Axum
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.1.0"

# Dependencias para serialización y logging
log = "0.4"
# Para variables de entorno
dotenvy = "0.15"
# Colores en consola
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
r2d2 = "0.8.10"
bcrypt = "0.17.1"
validator = { version = "0.20.0", features = ["derive"] }
once_cell = "1.21.3"
jsonwebtoken = "8.3"
lazy_static = "1.5.0"
[features]
custom-protocol = [ "tauri/custom-protocol" ]
